Add configuration files and refactor cookie handling in database interactions